--- a/package.json
+++ b/package.json
@@ -1,89 +1,48 @@
 {
-  "name": "webpack-boilerplate-2018",
-  "sideEffects": [
-    "*.scss"
-  ],
+  "name": "webpack-boilerplate",
   "version": "1.0.0",
-  "description": "Webpack 4 JS/SCSS Boilerplate",
-  "private": true,
+  "description": "Webpack 4 Boilerplate",
+  "main": "index.js",
+  "author": "Tania Rascia <tania@taniarascia.com>",
+  "license": "MIT",
   "scripts": {
-    "test": "jest",
-    "debug": "NODE_ENV=debug npm test",
-    "develop": "NODE_ENV=develop",
-    "start": "cross-env NODE_ENV=development  webpack-dev-server --config ./config/webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js",
-    "lint": "yarn eslint .",
-    "lint:fix": "yarn lint --fix",
-    "fix-code": "prettier-eslint --write 'src/scripts/**/*.{js,jsx}'",
-    "fix-styles": "prettier-stylelint --write 'src/styles/**/*.{css,scss}'",
-    "postinstall": "node ./config/site.setup.js"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js"
   },
-  "author": "czechue",
-  "license": "ISC",
+  "keywords": [
+    "webpack",
+    "webpack 4",
+    "webpack boilerplate",
+    "boilerplate",
+    "hmr"
+  ],
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "autoprefixer": "^9.4.7",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "chalk": "^2.4.2",
-    "clean-webpack-plugin": "^1.0.1",
-    "clear": "^0.1.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
-    "cssnano": "^4.1.8",
-    "deepmerge": "^3.1.0",
-    "enquirer": "^2.3.0",
-    "eslint": "^5.13.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "faker": "^4.1.0",
-    "figlet": "^1.2.1",
-    "file-loader": "^3.0.1",
-    "globby": "^9.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.1.0",
-    "jest-cli": "^23.1.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "pngjs": "^3.3.3",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.0",
+    "cssnano": "^4.1.10",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^4.0.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.0.4",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.14.3",
-    "prettier-eslint-cli": "^4.7.1",
-    "prettier-stylelint": "^0.4.2",
-    "pug-html-loader": "^1.1.5",
-    "puppeteer": "^1.5.0",
-    "robotstxt-webpack-plugin": "^5.0.0",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.23.1",
-    "stylelint-config-prettier": "^4.0.0",
-    "stylelint-config-recommended": "^2.1.0",
-    "stylelint-scss": "^3.3.1",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "svg-sprite-loader": "^4.1.1",
-    "svgo": "^1.1.1",
-    "svgo-loader": "^2.2.0",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webapp-webpack-plugin": "^2.6.0",
-    "webpack": "4.28.0",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2",
-    "webpackbar": "^3.1.5"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "jquery": "^3.3.1",
-    "lodash": "^4.17.10",
-    "modularscale-sass": "^3.0.8",
-    "normalize-scss": "^7.0.1",
-    "pixelmatch": "^4.0.2",
-    "uikit": "^3.0.0-rc.17"
-  },
-  "prettier": {}
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
+    "url-loader": "^4.0.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
+  }
 }
