--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "html-loader": "^1.1.0"
+    "html-loader": "^1.1.0",
+    "jshint": "^2.11.1"
   }
 }
