--- a/package.json
+++ b/package.json
@@ -12,20 +12,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-minifier-terser": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
-    "postcss": "^7.0.26",
+    "postcss": "^7.0.32",
     "postcss-loader": "^3.0.0",
     "preload-webpack-plugin": "^2.3.0",
     "pug": "^2.0.4",
@@ -34,21 +38,17 @@
     "raw-loader": "^4.0.0",
     "resolve-url": "^0.2.1",
     "resolve-url-loader": "^3.1.1",
-    "sass": "^1.22.10",
+    "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
-    "url-loader": "^3.0.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "autoprefixer": "^9.7.4",
-    "css-loader": "^3.4.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "jade": "^1.11.0",
     "style-loader": "^1.1.3",
-    "webpack": "^4.41.5"
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
     "dotenv-webpack": "^1.8.0",
-    "swiper": "^5.3.8",
-    "terser-webpack-plugin": "^3.0.1"
+    "swiper": "^5.4.3",
+    "terser-webpack-plugin": "^3.0.4"
   }
 }
