--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,19 @@
 {
-  "parser": "babel-eslint",
-  "rules": {}
+    "env": {
+        "browser": true,
+        "es6": true,
+        "node": true
+    },
+    "extends": "airbnb",
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "rules": {
+        
+    }
 }
