--- a/package.json
+++ b/package.json
@@ -1,54 +1,63 @@
 {
-  "name": "webpack-boilerplate",
+  "name": "shag",
   "version": "1.0.0",
-  "description": "Webpack 4 Boilerplate",
+  "description": "charity project",
   "main": "index.js",
-  "author": "Tania Rascia <tania@taniarascia.com>",
-  "license": "MIT",
   "scripts": {
-    "dev": "webpack --config config/webpack.dev.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js"
+    "dev": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production",
+    "deploy": "npm run build && netlify deploy --prod"
   },
-  "keywords": [
-    "webpack",
-    "webpack 4",
-    "webpack boilerplate",
-    "boilerplate",
-    "hmr"
+  "browserslist": [
+    "> 1%",
+    "last 3 version"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Persik3221/rs_lang.git"
+  },
+  "author": "73 group",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Persik3221/rs_lang/issues"
+  },
+  "homepage": "https://github.com/Persik3221/rs_lang#readme",
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-env": "^7.9.5",
+    "airbnb": "0.0.2",
+    "autoprefixer": "^9.7.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.5.0",
+    "css-loader": "^3.5.2",
+    "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
-    "eslint-loader": "^4.0.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.0.4",
+    "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "^2.3.5",
-    "url-loader": "^4.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "html-loader": "^1.1.0",
-    "jquery": "^3.5.1",
-    "jshint": "^2.11.1"
+    "@babel/polyfill": "^7.8.7",
+    "core-js": "^3.6.5"
   }
 }
