--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Persik3221/rs_lang.git"
+    "url": "git+https://github.com/lmasl/Shag.git"
   },
   "author": "73 group",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Persik3221/rs_lang/issues"
+    "url": "https://github.com/lmasl/Shag/issues"
   },
-  "homepage": "https://github.com/Persik3221/rs_lang#readme",
+  "homepage": "https://github.com/lmasl/Shag#readme",
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "file-loader": "^6.0.0",
+    "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
@@ -59,6 +60,13 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
-    "core-js": "^3.6.5"
+    "bootstrap": "^4.5.2",
+    "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
+    "popper.js": "^1.16.1",
+    "pug": "^3.0.0",
+    "pug-loader": "^2.4.0"
   }
 }
